# TextFlowAI-TelegramBot

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  main.py  mypy.ini  pyproject.toml
app/bot/: keyboards.py
app/bot/handlers/: cabinet.py  commands.py  messages.py
app/bot/middlewares/: user_middleware.py
app/config/: settings.py
app/core/exceptions/: __init__.py  base.py  message.py  user.py
app/core/models/: base.py  message.py  user.py
app/core/services/: cabinet_service.py  container.py  message_service.py  user_service.py
app/core/services/ai/: generator.py
app/core/services/ai/prompt_builders/: base_builder.py  conversation_prompt_builder.py
app/infrastructure/database/: connection.py
app/infrastructure/database/repositories/: base.py  message_repository.py  user_repository.py
app/services/ai/providers/: base_provider.py  google_provider.py  schemas.py
app/utils/: validators.py
migrations/: env.py
migrations/versions/: 7438165fce5b_create_users_and_messages_tables_from_.py  d12ca9473fac_delete_status_field_from_message_table.py
tests/: conftest.py  test_validators.py
tests/bot/handlers/: test_commands.py  test_messages.py
tests/bot/middlewares/: test_user_middleware.py
tests/core/models/: test_base.py  test_message.py  test_user.py
tests/core/services/: test_container.py  test_message_service.py  test_user_service.py
tests/core/services/ai/: test_generator.py
tests/infrastructure/database/repositories/: test_base_repository.py  test_message_repository.py  test_user_repository.py
(+4 files in other folders)
